--- a/spark/0-Ejemplo-Pyspark.ipynb
+++ b/spark/0-Ejemplo-Pyspark.ipynb
@@ -29,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "'/usr/lib/jvm/java-17-openjdk-amd64'"
+       "'/usr/lib/jvm/java-17-openjdk-amd64/'"
       ]
      },
      "execution_count": 1,
@@ -39,7 +39,13 @@
    ],
    "source": [
     "import os\n",
-    "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-17-openjdk-amd64\"\n",
+    "\n",
+    "# En nuestro ordenador personal, si no esta definida la variable JAVA_HOME, deberemos indicarla\n",
+    "# os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-17-openjdk-amd64\"\n",
+    "\n",
+    "# En los laboratorios docentes, sera necesario utilizar la siguiente\n",
+    "# os.environ[\"JAVA_HOME\"] = \"/usr/\"\n",
+    "\n",
     "os.environ[\"JAVA_HOME\"]"
    ]
   },
@@ -98,11 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/11/13 16:53:10 WARN Utils: Your hostname, maes resolves to a loopback address: 127.0.1.1; using 10.0.78.133 instead (on interface wlp0s20f3)\n",
+      "24/11/13 16:53:10 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/11/13 16:53:11 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "# Si aparecen varios WARNING pero ningún error, los ignoramos.\n",
     "# Si ejecutamos sucesivas veces el notebook no vuelven a aparecer.\n",
@@ -119,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,10 +164,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x729e2cdf1690>"
+       "<pyspark.sql.session.SparkSession at 0x7e600431e470>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pi is roughly  3.141004\n"
+      "Pi is roughly  3.138292\n"
      ]
     },
     {
@@ -226,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
