--- a/spark/3-SQL-DataFrames.ipynb
+++ b/spark/3-SQL-DataFrames.ipynb
@@ -29,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "'/usr/lib/jvm/java-17-openjdk-amd64/'"
+       "'/home/maes/.sdkman/candidates/java/current'"
       ]
      },
      "execution_count": 1,
@@ -83,9 +83,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "openjdk version \"17.0.13\" 2024-10-15\n",
-      "OpenJDK Runtime Environment (build 17.0.13+11-Ubuntu-2ubuntu122.04)\n",
-      "OpenJDK 64-Bit Server VM (build 17.0.13+11-Ubuntu-2ubuntu122.04, mixed mode, sharing)\n"
+      "openjdk version \"21.0.4\" 2024-07-16 LTS\n",
+      "OpenJDK Runtime Environment Temurin-21.0.4+7 (build 21.0.4+7-LTS)\n",
+      "OpenJDK 64-Bit Server VM Temurin-21.0.4+7 (build 21.0.4+7-LTS, mixed mode, sharing)\n"
      ]
     }
    ],
@@ -110,11 +110,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/11/13 18:28:01 WARN Utils: Your hostname, maes resolves to a loopback address: 127.0.1.1; using 10.0.78.133 instead (on interface wlp0s20f3)\n",
-      "24/11/13 18:28:01 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/11/18 01:17:18 WARN Utils: Your hostname, maes-GE72-7RE resolves to a loopback address: 127.0.1.1; using 192.168.1.58 instead (on interface enp3s0)\n",
+      "24/11/18 01:17:18 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/11/13 18:28:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/11/18 01:17:19 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -127,7 +127,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.0.78.133:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.58:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -143,7 +143,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fd464012770>"
+       "<pyspark.sql.session.SparkSession at 0x7ea2e35126b0>"
       ]
      },
      "execution_count": 4,
@@ -196,13 +196,6 @@
      "output_type": "stream",
      "text": [
       "<class 'pyspark.sql.dataframe.DataFrame'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
      ]
     },
     {
@@ -463,7 +456,7 @@
       "+- HashAggregate(keys=[DEST_COUNTRY_NAME#30], functions=[sum(count#32)])\n",
       "   +- Exchange hashpartitioning(DEST_COUNTRY_NAME#30, 5), ENSURE_REQUIREMENTS, [plan_id=85]\n",
       "      +- HashAggregate(keys=[DEST_COUNTRY_NAME#30], functions=[partial_sum(count#32)])\n",
-      "         +- FileScan csv [DEST_COUNTRY_NAME#30,count#32] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/home/maes/Documents/Docencia/SDPD/Codigo/spark/data/flight-data/..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n",
+      "         +- FileScan csv [DEST_COUNTRY_NAME#30,count#32] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/home/maes/Universidad/Docencia/2025/SDPDI/github/spark/data/flig..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n",
       "\n",
       "\n"
      ]
@@ -611,8 +604,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                24/11/13 18:28:36 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
-      "                                                                                "
+      "                                                                                24/11/18 01:17:30 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
      ]
     },
     {
@@ -782,7 +774,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "24/11/18 01:17:32 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n"
      ]
     },
     {
@@ -801,6 +793,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('RT', 5121), ('...', 2602), ('', 2477), ('de', 2187), ('are', 1795)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(tweets\n",
+    " .rdd\n",
+    " .flatMap( lambda t: t.text.split(\" \") )\n",
+    " .map( lambda w: (w, 1) )\n",
+    " .reduceByKey( lambda c1,c2: c1+c2 )\n",
+    " .takeOrdered(5, key=lambda x: -x[1] )\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -809,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +843,7 @@
        "pyspark.sql.dataframe.DataFrame"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +874,7 @@
        "10000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,16 +885,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 26:>                                                         (0 + 1) / 1]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -880,13 +898,6 @@
       "|      5.03|      10.0|   Abad Abad|  Agustin|\n",
       "+----------+----------+------------+---------+\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
      ]
     }
    ],
@@ -902,28 +913,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 29:>                                                         (0 + 1) / 1]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Correlation between 'age' and 'grade':  0.005887\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
      ]
     }
    ],
@@ -934,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +966,7 @@
        " Row(age_grade='36', 10.0=0, 5.03=0, 5.04=0, 5.05=0, 5.08=0, 5.09=0, 5.13=0, 5.16=0, 5.17=0, 5.18=0, 5.2=0, 5.24=0, 5.25=0, 5.29=0, 5.3=0, 5.31=0, 5.32=0, 5.35=0, 5.36=0, 5.37=0, 5.38=0, 5.4=0, 5.45=0, 5.46=0, 5.47=0, 5.48=0, 5.49=0, 5.5=0, 5.51=0, 5.53=0, 5.54=0, 5.55=0, 5.56=0, 5.57=0, 5.58=0, 5.59=0, 5.6=0, 5.62=0, 5.64=0, 5.65=0, 5.66=0, 5.67=0, 5.68=0, 5.69=0, 5.7=0, 5.71=0, 5.72=0, 5.73=0, 5.74=0, 5.75=0, 5.76=0, 5.77=0, 5.78=0, 5.79=0, 5.8=0, 5.81=0, 5.82=0, 5.83=0, 5.84=0, 5.85=0, 5.86=0, 5.87=0, 5.88=0, 5.89=0, 5.9=0, 5.91=0, 5.92=0, 5.93=0, 5.94=0, 5.95=0, 5.96=0, 5.97=0, 5.98=0, 5.99=0, 6.0=0, 6.01=0, 6.02=0, 6.03=0, 6.04=0, 6.05=0, 6.06=0, 6.07=0, 6.08=0, 6.09=0, 6.1=0, 6.11=0, 6.12=0, 6.13=0, 6.14=0, 6.15=0, 6.16=0, 6.17=0, 6.18=0, 6.19=0, 6.2=0, 6.21=0, 6.22=0, 6.23=0, 6.24=0, 6.25=0, 6.26=0, 6.27=0, 6.28=0, 6.29=0, 6.3=0, 6.31=0, 6.32=0, 6.33=0, 6.34=0, 6.35=0, 6.36=0, 6.37=0, 6.38=0, 6.39=0, 6.4=0, 6.41=0, 6.42=0, 6.43=0, 6.44=0, 6.45=0, 6.46=0, 6.47=0, 6.48=0, 6.49=0, 6.5=0, 6.51=0, 6.52=0, 6.53=0, 6.54=0, 6.55=0, 6.56=0, 6.57=0, 6.58=0, 6.59=0, 6.6=0, 6.61=0, 6.62=0, 6.63=0, 6.64=0, 6.65=0, 6.66=0, 6.67=0, 6.68=0, 6.69=0, 6.7=0, 6.71=0, 6.72=0, 6.73=0, 6.74=0, 6.75=0, 6.76=0, 6.77=0, 6.78=0, 6.79=0, 6.8=0, 6.81=0, 6.82=0, 6.83=0, 6.84=0, 6.85=0, 6.86=0, 6.87=0, 6.88=0, 6.89=0, 6.9=0, 6.91=0, 6.92=0, 6.93=0, 6.94=0, 6.95=0, 6.96=0, 6.97=0, 6.98=0, 6.99=0, 7.0=0, 7.01=0, 7.02=0, 7.03=0, 7.04=0, 7.05=0, 7.06=0, 7.07=0, 7.08=0, 7.09=0, 7.1=0, 7.11=0, 7.12=0, 7.13=0, 7.14=0, 7.15=0, 7.16=0, 7.17=0, 7.18=0, 7.19=0, 7.2=0, 7.21=0, 7.22=0, 7.23=0, 7.24=0, 7.25=0, 7.26=0, 7.27=0, 7.28=0, 7.29=0, 7.3=0, 7.31=0, 7.32=0, 7.33=0, 7.34=0, 7.35=0, 7.36=0, 7.37=0, 7.38=0, 7.39=0, 7.4=0, 7.41=0, 7.42=0, 7.43=0, 7.44=0, 7.45=0, 7.46=0, 7.47=0, 7.48=0, 7.49=0, 7.5=0, 7.51=0, 7.52=0, 7.53=0, 7.54=0, 7.55=0, 7.56=0, 7.57=0, 7.58=0, 7.59=0, 7.6=0, 7.61=0, 7.62=0, 7.63=0, 7.64=0, 7.65=0, 7.66=0, 7.67=0, 7.68=1, 7.69=0, 7.7=0, 7.71=0, 7.72=0, 7.73=0, 7.74=0, 7.75=0, 7.76=0, 7.77=0, 7.78=0, 7.79=0, 7.8=0, 7.81=0, 7.82=0, 7.83=0, 7.84=0, 7.85=0, 7.86=0, 7.87=0, 7.88=0, 7.89=0, 7.9=0, 7.91=0, 7.92=0, 7.93=0, 7.94=0, 7.95=0, 7.96=0, 7.97=0, 7.98=0, 7.99=0, 8.0=0, 8.01=0, 8.02=0, 8.03=0, 8.04=0, 8.05=0, 8.06=0, 8.07=0, 8.08=0, 8.09=0, 8.1=0, 8.11=0, 8.12=0, 8.13=0, 8.14=0, 8.15=0, 8.16=0, 8.17=0, 8.18=0, 8.19=0, 8.2=0, 8.21=0, 8.22=0, 8.23=0, 8.24=0, 8.25=0, 8.26=0, 8.27=0, 8.28=0, 8.29=0, 8.3=0, 8.31=0, 8.32=0, 8.33=0, 8.34=0, 8.35=0, 8.36=0, 8.37=0, 8.38=0, 8.39=0, 8.4=0, 8.41=0, 8.42=0, 8.43=0, 8.44=0, 8.45=0, 8.46=0, 8.47=0, 8.48=0, 8.49=0, 8.5=0, 8.51=0, 8.52=0, 8.53=0, 8.54=0, 8.55=0, 8.56=0, 8.57=0, 8.58=0, 8.59=0, 8.6=0, 8.61=0, 8.62=0, 8.63=0, 8.64=0, 8.65=0, 8.66=0, 8.67=0, 8.68=0, 8.69=0, 8.7=0, 8.71=0, 8.72=0, 8.73=0, 8.74=0, 8.75=0, 8.76=0, 8.77=0, 8.78=0, 8.79=0, 8.8=0, 8.81=0, 8.82=0, 8.83=0, 8.84=0, 8.85=0, 8.86=0, 8.87=0, 8.88=0, 8.89=0, 8.9=0, 8.91=0, 8.92=0, 8.93=0, 8.94=0, 8.95=0, 8.96=0, 8.97=0, 8.98=0, 8.99=0, 9.0=0, 9.01=0, 9.02=0, 9.03=0, 9.04=0, 9.05=0, 9.06=0, 9.07=0, 9.08=0, 9.09=0, 9.1=0, 9.11=0, 9.12=0, 9.13=0, 9.14=0, 9.15=0, 9.16=0, 9.17=0, 9.18=0, 9.19=0, 9.2=0, 9.21=0, 9.22=0, 9.23=0, 9.24=0, 9.25=0, 9.26=0, 9.27=0, 9.28=0, 9.29=0, 9.3=0, 9.31=0, 9.32=0, 9.33=0, 9.34=0, 9.35=0, 9.36=0, 9.37=0, 9.38=0, 9.39=0, 9.4=0, 9.41=0, 9.42=0, 9.43=0, 9.44=0, 9.45=0, 9.46=0, 9.47=0, 9.48=0, 9.49=0, 9.5=0, 9.51=0, 9.52=0, 9.53=0, 9.54=0, 9.55=0, 9.56=0, 9.57=0, 9.58=0, 9.59=0, 9.6=0, 9.61=0, 9.62=0, 9.63=0, 9.64=0, 9.65=0, 9.66=0, 9.67=0, 9.68=0, 9.69=0, 9.7=0, 9.71=0, 9.72=0, 9.73=0, 9.74=0, 9.75=0, 9.76=0, 9.77=0, 9.78=0, 9.79=0, 9.8=0, 9.81=0, 9.82=0, 9.83=0, 9.84=0, 9.85=0, 9.86=0, 9.87=0, 9.88=0, 9.89=0, 9.9=0, 9.91=0, 9.92=0, 9.93=0, 9.94=0, 9.95=0, 9.96=0, 9.97=0, 9.98=0, 9.99=0)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +999,7 @@
        " ('grade', 'float')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1264,13 +1261,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio WordCount - Tweets (con DataFrames)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este ejercicio realizaras un conteo de palabras del texto de una colección de Tweets situados en `data/15m-sample.json`.\n",
+    "- Puede utilizarse el objeto tweets creado en celdas anteriores\n",
+    "- Los tweets tienen un campo `text` con el texto del tweet\n",
+    "- Deberán devolverse las 5 palabras más repetidas entre todos los tweets\n",
+    "- Utilizaremos Dataframes (no RDDS)\n",
+    "- Necesitaremos crear un nuevo dataframe a partir del original que contenga una fila por cada palabra (`word`). Será de mucha utilidad la función [`explode`](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/api/pyspark.sql.functions.explode.html) disponible en el paquete ```pyspark.sql.functions```\n",
+    "- Otras funciones de esta librería podrían ser útiles también (Ver [documentación](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/api/pyspark.sql.functions.explode.html))"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyspark.sql.functions as f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-----+\n",
+      "|word|count|\n",
+      "+----+-----+\n",
+      "|  RT| 5121|\n",
+      "| ...| 2602|\n",
+      "|    | 2477|\n",
+      "|  de| 2187|\n",
+      "| are| 1795|\n",
+      "+----+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(\n",
+    "    tweets.withColumn('word', f.explode(f.split(f.col('text'), ' ')))\n",
+    "    .groupBy('word')\n",
+    "    .count()\n",
+    "    .sort('count', ascending=False)\n",
+    "    .show(5)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paramos sparkSession\n",
-    "spark.stop()"
+    "#spark.stop()"
    ]
   }
  ],
