Add window example

--- a/spark/4-Bike-rental-exercises.ipynb
+++ b/spark/4-Bike-rental-exercises.ipynb
@@ -30,9 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/11/28 00:42:35 WARN Utils: Your hostname, maes-GE72-7RE resolves to a loopback address: 127.0.1.1; using 192.168.1.58 instead (on interface enp3s0)\n",
+      "24/11/28 00:42:35 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/11/28 00:42:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -59,10 +70,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x704fd0b0cee0>"
+       "<pyspark.sql.session.SparkSession at 0x7c751b594ee0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "### Exercise 1\n",
     "The station dataset contains information about the location and characteristics of the stations installed for the rental service.\n",
     "\n",
     "Let's do a little summary to compute for each landmark the date when the first station was deployed, the date of the last update and the total number of docks available for the area so far."
@@ -548,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "### Exercise 2\n",
     "\n",
     "Compute the total number of trips, the total trip duration (hours) and the average trip duration (minutes) for each bike, and display a ranking for the top 5 most used with the corresponding stats "
    ]
@@ -579,7 +590,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 15:=======>                                                  (1 + 7) / 8]"
+      "[Stage 15:=============================>                            (4 + 4) / 8]"
      ]
     },
     {
@@ -683,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "### Exercise 3\n",
     "\n",
     "Compute the minimun distance traveled for a bike trip. We will consider the minimum trip distance to the distance between the starting and ending stations.\n",
     "\n",
@@ -830,9 +841,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 30:=======>                                                  (1 + 7) / 8]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -841,33 +859,123 @@
       "|trip_id|bike|duration|           distance|\n",
       "+-------+----+--------+-------------------+\n",
       "| 449868|  97|     593|0.01855324879480863|\n",
-      "| 757653| 418|    8682|0.01855324879480863|\n",
-      "| 648319| 392|     115|0.01855324879480863|\n",
-      "| 736456| 436|    4285|0.01855324879480863|\n",
-      "| 842718| 514|   17738|0.01855324879480863|\n",
-      "| 772900| 349|    1172|0.01855324879480863|\n",
-      "| 653113| 339|   14373|0.01855324879480863|\n",
-      "| 777616| 314|    1780|0.01855324879480863|\n",
-      "| 911100| 380|    2973|0.01855324879480863|\n",
-      "| 776085| 359|   33831|0.01855324879480863|\n",
-      "| 652903| 490|    2314|0.01855324879480863|\n",
-      "| 773425| 291|    1646|0.01855324879480863|\n",
-      "| 842984| 395|   26321|0.01855324879480863|\n",
-      "| 773303| 389|     862|0.01855324879480863|\n",
-      "| 652058| 490|   12081|0.01855324879480863|\n",
-      "| 770223| 579|    3909|0.01855324879480863|\n",
       "| 488917| 629|    1400|0.01855324879480863|\n",
-      "| 770222| 326|    3895|0.01855324879480863|\n",
-      "| 648692| 424|    1040|0.01855324879480863|\n",
-      "| 763841| 524|     129|0.01855324879480863|\n",
+      "| 692235|  56|    4426|0.01855324879480863|\n",
+      "| 513812| 601|     366|0.01855324879480863|\n",
+      "| 757653| 418|    8682|0.01855324879480863|\n",
+      "| 509879| 389|     952|0.01855324879480863|\n",
+      "| 716750| 585|    2197|0.01855324879480863|\n",
+      "| 490627| 340|     825|0.01855324879480863|\n",
+      "| 561907| 408|     113|0.01855324879480863|\n",
+      "| 497606| 377|     548|0.01855324879480863|\n",
+      "| 716134| 214|     638|0.01855324879480863|\n",
+      "| 491854| 458|     607|0.01855324879480863|\n",
+      "| 736456| 436|    4285|0.01855324879480863|\n",
+      "| 501676| 344|      61|0.01855324879480863|\n",
+      "| 694170| 403|     667|0.01855324879480863|\n",
+      "| 480884| 503|      66|0.01855324879480863|\n",
+      "| 648319| 392|     115|0.01855324879480863|\n",
+      "| 478724| 559|    4731|0.01855324879480863|\n",
+      "| 692548| 348|    4440|0.01855324879480863|\n",
+      "| 473010| 306|    8305|0.01855324879480863|\n",
       "+-------+----+--------+-------------------+\n",
       "only showing top 20 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
      ]
     }
    ],
    "source": [
     "bike_trips.orderBy(col(\"distance\")).where(bike_trips.distance > 0).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 4\n",
+    "\n",
+    "Using the distance obtained in the previous exercise, we will calculate the cumulative sum for each record for the variables distance and duration.\n",
+    "\n",
+    "To do so, it will be necessary to use the [Window](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/api/pyspark.sql.Window.html) class of pyspark.sql. Window creates partitions from a field (which can be sorted). The resulting object can be used to do calculations where a row needs to know, for example, the value of the previous row, the next row, all previous rows, etc. \n",
+    "\n",
+    "More info https://medium.com/@uzzaman.ahmed/pyspark-window-functions-a-comprehensive-guide-dc9bdad8c7ae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import Window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+----+-------------------+------------------+--------+------------+\n",
+      "|trip_id|bike|           distance|      acc_distance|duration|acc_duration|\n",
+      "+-------+----+-------------------+------------------+--------+------------+\n",
+      "| 433552|  12| 1.5441489103869313|1.5441489103869313|     656|         656|\n",
+      "| 434762|  12|  2.210694602874421|3.7548435132613527|     774|        1430|\n",
+      "| 435130|  12|  2.210694602874421|5.9655381161357734|     759|        2189|\n",
+      "| 435242|  12|  2.204212268069549| 8.169750384205322|     624|        2813|\n",
+      "| 443112|  12| 0.8100583165374903| 8.979808700742813|     261|        3074|\n",
+      "| 443689|  12|  1.411167269013301|10.390975969756115|     474|        3548|\n",
+      "| 443759|  12|  0.770704590176736| 11.16168055993285|     205|        3753|\n",
+      "| 444788|  12|  0.770704590176736|11.932385150109587|     234|        3987|\n",
+      "| 444884|  12|  2.210694602874421|14.143079752984008|     859|        4846|\n",
+      "| 445188|  12| 0.7654864959063187|14.908566248890326|     426|        5272|\n",
+      "| 445231|  12| 1.5811076468914576|16.489673895781785|     578|        5850|\n",
+      "| 445549|  12|  2.204212268069549| 18.69388616385133|     690|        6540|\n",
+      "| 453865|  12| 0.6737944044355689|  19.3676805682869|     320|        6860|\n",
+      "| 458654|  12| 1.4604412622174388| 20.82812183050434|     699|        7559|\n",
+      "| 462331|  12|  0.638805703525601|21.466927534029942|     411|        7970|\n",
+      "| 476315|  12|  0.703994082130066| 22.17092161616001|   11490|       19460|\n",
+      "| 483539|  12| 1.2543458558899305| 23.42526747204994|     485|       19945|\n",
+      "| 483679|  12| 1.4604412622174388| 24.88570873426738|     708|       20653|\n",
+      "| 483748|  12|                0.0| 24.88570873426738|   17708|       38361|\n",
+      "| 495189|  12|0.38162518407413704|25.267333918341517|     628|       38989|\n",
+      "+-------+----+-------------------+------------------+--------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/11/28 00:42:48 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n"
+     ]
+    }
+   ],
+   "source": [
+    "window = Window.partitionBy('bike').orderBy('trip_id')\n",
+    "acc_trips = (\n",
+    "    bike_trips.\n",
+    "    select(\n",
+    "        'trip_id',\n",
+    "        'bike',\n",
+    "        'distance',\n",
+    "        sum('distance').over(window).alias('acc_distance'),\n",
+    "        'duration',\n",
+    "        sum('duration').over(window).alias('acc_duration')\n",
+    "    )\n",
+    ")\n",
+    "acc_trips.show()"
    ]
   }
  ],
